# agenda_smile

./: .gitignore  Procfile  pyproject.toml
.github/workflows/: keep_alive.yml
apps/accounts/: backends.py  serializers.py  urls.py  views.py
apps/accounts/tests/: factories.py  test_auth.py  test_user.py
apps/appointments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/appointments/migrations/: 0001_initial.py  0002_appointment_delete_appointments.py  0003_alter_appointment_options.py
apps/dentists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/dentists/migrations/: 0001_initial.py
apps/dentists/tests/: factories.py  test_dentist.py
apps/patients/: admin.py  models.py  serializers.py  urls.py  views.py
apps/patients/migrations/: 0001_initial.py  0002_alter_patient_options_patient_cpf_patient_created_at_and_more.py  0003_patient_user.py
apps/patients/tests/: factories.py  test_patient.py
config/: settings.py  urls.py
